--- a/miniprogram/pages/work7/index.wxss
+++ b/miniprogram/pages/work7/index.wxss
@@ -298,3 +298,13 @@ page {
     1px 0 1px #8B4513, 0 1px 1px #8B4513, 
     0 -1px 1px #8B4513, -1px 0 1px #8B4513;
 }
+.he{
+  position: absolute;
+  right:10%;
+  color: red;
+  padding: 10rpx;
+  text-align: center;
+  /* width: 150rpx; */
+  background-color: #fff;
+  border-radius: 10rpx;
+}
