--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -8,4 +8,5 @@
 <navigator class="work7" url="/pages/work7/index">work7 天气预报<text>-></text></navigator>
 <navigator class="work8" url="/pages/work8/Index/index">work8 机电微官网<text>-></text></navigator>
 <navigator class="work9" url="/pages/work9/index">work9 记账<text>-></text></navigator>
+<navigator class="work11" url="/pages/work11/index">work9 阳光晨跑<text>-></text></navigator>
 <navigator class="exitbtn" open-type="exit" target="miniProgram">退出</navigator>
