--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -5,8 +5,9 @@
 <navigator class="work4" url="/pages/work4/index">work4 尤克里里<text>-></text></navigator>
 <navigator class="work4" url="/pages/work4 copy/index">work4 尤克里里 copy <text>-></text></navigator>
 <navigator class="work5" url="/pages/work5/index">work5 计算器<text>-></text></navigator>
+<navigator class="work6" open-type="switchTab" url="/pages/work6/property">work6 诉讼费<text>-></text></navigator>
 <navigator class="work7" url="/pages/work7/index">work7 天气预报<text>-></text></navigator>
 <navigator class="work8" url="/pages/work8/Index/index">work8 机电微官网<text>-></text></navigator>
 <navigator class="work9" url="/pages/work9/index">work9 记账<text>-></text></navigator>
-<navigator class="work11" url="/pages/work11/index">work9 阳光晨跑<text>-></text></navigator>
+<navigator class="work11" url="/pages/work11/index">work11 阳光晨跑<text>-></text></navigator>
 <navigator class="exitbtn" open-type="exit" target="miniProgram">退出</navigator>
