--- a/miniprogram/pages/work8/Index/index.wxss
+++ b/miniprogram/pages/work8/Index/index.wxss
@@ -42,6 +42,18 @@
 .l6{
   flex: 1;
 }
+.l7{
+  flex: 3;
+}
+.l8{
+  flex: 1;
+}
+.l9{
+  flex: 3;
+}
+.l10{
+  flex: 1;
+}
 .right{
   flex: 1;
   display: flex;
@@ -58,6 +70,9 @@
   border: 1px solid black;
 }
 .foot{
-  background-color: lightgrey;
+  position: absolute;
+  bottom:0;
+  left: 25%;
+  /* background-color: lightgrey; */
   text-align: center;
 }
