--- a/miniprogram/pages/work8/map/map.wxss
+++ b/miniprogram/pages/work8/map/map.wxss
@@ -1,1 +1,79 @@
 /* pages/work8/map/map.wxss */
+.page{
+  margin: 0rpx 10rpx 0rpx 10rpx;
+}
+.pic{
+  width: 100%;
+  height: 100%;
+}
+.body{
+  margin: 50rpx 10rpx 0rpx 10rpx;
+  display: flex;
+  flex-direction: row;
+}
+.body view{
+  width: 300rpx;
+  height: 600rpx;
+  align-items: center;
+}
+.left{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.left view{
+  width: 200rpx;
+  height: 200rpx;    
+}
+.l1{
+  flex: 3;
+}
+.l2{
+  flex: 1;
+}
+.l3{
+  flex: 3;
+}
+.l4{
+  flex: 1;
+}
+.l5{
+  flex: 3;
+}
+.l6{
+  flex: 1;
+}
+.l7{
+  flex: 3;
+}
+.l8{
+  flex: 1;
+}
+.l9{
+  flex: 3;
+}
+.l10{
+  flex: 1;
+}
+.right{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.right view{
+  width: 200rpx;
+  height: 200rpx;
+}
+.pic1{
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+.foot{
+  position: absolute;
+  bottom:0;
+  left: 25%;
+  /* background-color: lightgrey; */
+  text-align: center;
+}
