--- a/miniprogram/pages/work11/index.wxml
+++ b/miniprogram/pages/work11/index.wxml
@@ -3,7 +3,7 @@
     <button type="primary" size="mini" bindtap="clear">清除数据</button>
     <button type="primary" size="mini" bindtap="save">保存</button>
     <button type="primary" size="mini" bindtap="playback">回放</button>
-    <button type="primary" size="mini" bindtap="getLocation">测试</button>
+    <!-- <button type="primary" size="mini" bindtap="getLocation">测试</button> -->
 </view>
 <view class="counter">
     <text>里程:{{mdl.toKM(meters)}}Km 时间：{{mdl.formatTime(seconds)}}</text>
