--- a/miniprogram/pages/work9/index.wxml
+++ b/miniprogram/pages/work9/index.wxml
@@ -5,11 +5,21 @@
         <text wx:else style="color: green;">{{incometotal-paytotal}}</text>
     </view>  
     <view class="total">
-        <view class="allin">收入:
-            <text style="color: green;">{{incometotal}}</text>
+        <view class="allin">
+            收入:
+        <view class='list1 income' wx:for="{{incomelist}}" wx:key='this' style="color: green;">+{{item}}
+            <!-- <text style="font-size: 22rpx;" wx:if="{{incometotal}}" class="del" bindtap="del">-</text> -->
+            <view style="font-size: 20rpx;" wx:if="{{Itime[incomelist.length-1]}}">日期：{{Itime[incomelist.length-1]}}</view>
         </view>
-        <view class="allpay">支出:
-            <text style="color: red;">{{paytotal}}</text>
+            <!-- <text style="color: green;">{{incometotal}}</text> -->
+        </view>
+        <view class="allpay">
+            支出:
+        <view style="color: red;" class="list1 pay" wx:for="{{paylist}}" wx:key='this' >-{{item}}
+            <!-- <text style="font-size: 22rpx;" wx:if="{{paytotal}}" class="del" bindtap="del">-</text> -->
+            <view style="font-size: 20rpx;"  wx:if="{{Ptime[paylist.length-1]}}">日期：{{Ptime[paylist.length-1]}}</view>
+        </view>
+            <!-- <text style="color: red;">{{paytotal}}</text> -->
         </view>
     </view>
 </view>
@@ -28,24 +38,32 @@
     <button bindtap="add" type="primary">增加</button>
     <input type="text" wx:if="{{isinput}}" value="{{inputval}}" bindconfirm="confirm"
      placeholder='{{isincome?"收入":"支出"}}金额'/>  
+     <picker wx:if="{{isinput}}"  mode="date" value="{{date}}" start="2015-09-01" end="20999-09-01" bindchange="bindDateChange">
+            <view class="picker">
+            当前选择: {{date}}
+            </view>
+        </picker>
     <!-- 收入列表 -->
     <view wx:if="{{isincome}}" class="a">
         <view class='list income' wx:for="{{incomelist}}" wx:key='this' style="color: green;">+{{item}}
-            <text wx:if="{{incometotal}}" class="del" bindtap="del">-</text>
+            <text class="del" bindtap="del">-</text>
+            <view wx:if="{{Itime[incomelist.length-1]}}">日期：{{Itime[incomelist.length-1]}}</view>
         </view>
+        <!-- <picker wx:if="{{isinput}}" mode="date" value="{{date}}" start="2015-09-01" end="20999-09-01" bindchange="bindDateChange">
+            <view class="picker">
+            当前选择: {{date}}
+            </view>
+        </picker> -->
     </view>
     <!-- 支出列表 -->
     <view wx:else class="a">
-        <view class="list pay" wx:for="{{paylist}}" wx:key='this' style="color: red;">-{{item}}
-            <text wx:if="{{paytotal}}" class="del" bindtap="del">-</text>
-        </view>
+        <view style="color: red;" class="list pay" wx:for="{{paylist}}" wx:key='this' >-{{item}}
+            <text class="del" bindtap="del">-</text>
+            <view wx:if="{{Ptime[paylist.length-1]}}">日期：{{Ptime[paylist.length-1]}}</view>
+        </view>     
     </view>
 </view>
-<view class="section">
-  <picker mode="date" value="{{date}}" start="2015-09-01" end="20999-09-01" bindchange="bindDateChange">
-    <view class="picker">
-      当前选择: {{date}}
-    </view>
-  </picker>
-</view>
+<!-- <view class="section"> -->
+  
+<!-- </view> -->
 
