--- a/miniprogram/pages/work9/index.wxml
+++ b/miniprogram/pages/work9/index.wxml
@@ -3,24 +3,9 @@
     <view class="balance">余额:
         <text wx:if="{{incometotal-paytotal<0}}" style="color: red;">{{incometotal-paytotal}}</text>
         <text wx:else style="color: green;">{{incometotal-paytotal}}</text>
-    </view>  
+    </view>
     <view class="total">
-        <view class="allin">
-            收入:
-        <view class='list1 income' wx:for="{{incomelist}}" wx:key='this' style="color: green;">+{{item}}
-            <!-- <text style="font-size: 22rpx;" wx:if="{{incometotal}}" class="del" bindtap="del">-</text> -->
-            <view style="font-size: 20rpx;" wx:if="{{Itime[incomelist.length-1]}}">日期：{{Itime[incomelist.length-1]}}</view>
-        </view>
-            <!-- <text style="color: green;">{{incometotal}}</text> -->
-        </view>
-        <view class="allpay">
-            支出:
-        <view style="color: red;" class="list1 pay" wx:for="{{paylist}}" wx:key='this' >-{{item}}
-            <!-- <text style="font-size: 22rpx;" wx:if="{{paytotal}}" class="del" bindtap="del">-</text> -->
-            <view style="font-size: 20rpx;"  wx:if="{{Ptime[paylist.length-1]}}">日期：{{Ptime[paylist.length-1]}}</view>
-        </view>
-            <!-- <text style="color: red;">{{paytotal}}</text> -->
-        </view>
+        <view wx:for="{{tempArr}}" wx:key="this">{{item[0]}} 收入:{{item[1]}} 支出:{{item[2]}}</view>
     </view>
 </view>
 <view class="content">
@@ -37,12 +22,13 @@
     <!-- 增加按钮 -->
     <button bindtap="add" type="primary">增加</button>
     <input type="text" wx:if="{{isinput}}" value="{{inputval}}" bindconfirm="confirm"
-     placeholder='{{isincome?"收入":"支出"}}金额'/>  
-     <picker wx:if="{{isinput}}"  mode="date" value="{{date}}" start="2015-09-01" end="20999-09-01" bindchange="bindDateChange">
-            <view class="picker">
+        placeholder='{{isincome?"收入":"支出"}}金额' />
+    <picker wx:if="{{isinput}}" mode="date" value="{{date}}" start="2015-09-01" end="20999-09-01"
+        bindchange="bindDateChange">
+        <view class="picker">
             当前选择: {{date}}
-            </view>
-        </picker>
+        </view>
+    </picker>
     <!-- 收入列表 -->
     <view wx:if="{{isincome}}" class="a">
         <view class='list income' wx:for="{{incomelist}}" wx:key='this' style="color: green;">+{{item}}
@@ -57,13 +43,12 @@
     </view>
     <!-- 支出列表 -->
     <view wx:else class="a">
-        <view style="color: red;" class="list pay" wx:for="{{paylist}}" wx:key='this' >-{{item}}
+        <view style="color: red;" class="list pay" wx:for="{{paylist}}" wx:key='this'>-{{item}}
             <text class="del" bindtap="del">-</text>
             <view wx:if="{{Ptime[paylist.length-1]}}">日期：{{Ptime[paylist.length-1]}}</view>
-        </view>     
+        </view>
     </view>
 </view>
 <!-- <view class="section"> -->
-  
-<!-- </view> -->
 
+<!-- </view> -->
