--- a/miniprogram/pages/work1/index.wxml
+++ b/miniprogram/pages/work1/index.wxml
@@ -11,4 +11,5 @@
 <navigator class="work9" url="/pages/work9/index">work9 记账<text>-></text></navigator>
 <navigator class="work10" url="/pages/work10/index">work10  马赛克<text>-></text></navigator>
 <navigator class="work11" url="/pages/work11/index">work11 阳光晨跑<text>-></text></navigator>
+<navigator class="work12" url="/pages/work12/index">work12  教学满意度调查<text>-></text></navigator>
 <navigator class="exitbtn" open-type="exit" target="miniProgram">退出</navigator>
