--- a/miniprogram/pages/work13/index.wxml
+++ b/miniprogram/pages/work13/index.wxml
@@ -1,3 +1,37 @@
-<view wx:for="{{musiclist}}" wx:key='this'>
-  <image src="{{item.coverImg}}" bindtap="click" data-id="{{index}}" style="height: 200rpx; width: 200rpx;" />
+<wxs src='./utils.wxs' module='utils'></wxs>
+<!-- 标签页标题 -->
+<view class="tab">
+  <view class='tab-item {{tab==0?"active":""}}' bindtap="changeItem" data-item="0">音乐推荐</view>
+  <view class='tab-item {{tab==1?"active":""}}' bindtap="changeItem" data-item="1">播放器</view>
+  <view class='tab-item {{tab==2?"active":""}}' bindtap="changeItem" data-item="2">播放列表</view>
+</view>
+<!-- 内容区域 -->
+<view class="content">
+  <swiper current="{{item}}" bindtap="changeTab">
+    <swiper-item>
+      <include src="info.wxml" />
+    </swiper-item>
+    <swiper-item>
+      <include src="play.wxml" />
+    </swiper-item>
+    <swiper-item>
+      <include src="playlist.wxml" />
+    </swiper-item>
+  </swiper>
+</view>
+<!-- 底部播放器 -->
+<view class="player">
+  <image class="player-cover" src="{{play.coverImg}}"></image>
+  <view class="play-info">
+    <view class="player-info-title">{{play.title}}</view>
+    <view class="player-info-singer">{{play.singer}}</view>
+  </view>
+  <view class="player-controls">
+  <!-- 切换播放列表 -->
+    <image src="images/01.png" bindtap="changePage" data-page="2"></image>
+    <!-- 播放或暂停按钮 -->
+    <image wx:if="{{state=='paused'}}" src="images/02.png" bindtap="play"></image>
+    <image wx:else src="images/02stop.png" bindtap="pause"></image>
+    <image src="images/03.png" bindtap="next"></image>
+  </view>
 </view>
