--- a/miniprogram/pages/work13/index.wxml
+++ b/miniprogram/pages/work13/index.wxml
@@ -1,9 +1,9 @@
 <wxs src='./utils.wxs' module='utils'></wxs>
 <!-- 标签页标题 -->
 <view class="tab">
-  <view class='tab-item {{tab==0?"active":""}}' bindtap="changeItem" data-item="0">音乐推荐</view>
-  <view class='tab-item {{tab==1?"active":""}}' bindtap="changeItem" data-item="1">播放器</view>
-  <view class='tab-item {{tab==2?"active":""}}' bindtap="changeItem" data-item="2">播放列表</view>
+  <view class='tab-item {{item==0?"active":""}}' bindtap="changeItem" data-item="0">音乐推荐</view>
+  <view class='tab-item {{item==1?"active":""}}' bindtap="changeItem" data-item="1">播放器</view>
+  <view class='tab-item {{item==2?"active":""}}' bindtap="changeItem" data-item="2">播放列表</view>
 </view>
 <!-- 内容区域 -->
 <view class="content">
@@ -22,7 +22,7 @@
 <!-- 底部播放器 -->
 <view class="player">
   <image class="player-cover" src="{{play.coverImg}}"></image>
-  <view class="play-info">
+  <view class="player-info">
     <view class="player-info-title">{{play.title}}</view>
     <view class="player-info-singer">{{play.singer}}</view>
   </view>
