--- a/miniprogram/pages/work13/play.wxml
+++ b/miniprogram/pages/work13/play.wxml
@@ -1,15 +1,15 @@
 <view class="content-play">
   <view class="content-play-info">
-    <text>{{play/title}}</text>
+    <text>{{play.title}}</text>
     <view>----{{play.singer}}----</view>
   </view>
   <view class='content-play-cover {{state=="running"?"rolling":""}}'>
     <image src="{{play.coverImg}}"></image>
   </view>
   <view class="content-play-progress">
-    <text>{{utils.formatTime(playcurrentTime)}}</text>
+    <text>{{utils.formatTime(play.currentTime)}}</text>
     <view>
-      <slider activeColor="#d33a31" block-size="12" backgroundColor="#dadada" value="{{play.precent}}"></slider>
+      <slider bindchange="hanleSliderChange" activeColor="#d33a31" block-size="12" backgroundColor="#dadada" value="{{play.percent}}"></slider>
     </view>
     <text>{{utils.formatTime(play.duration)}}</text>
   </view>
