--- a/miniprogram/pages/work14/index.wxml
+++ b/miniprogram/pages/work14/index.wxml
@@ -1,36 +1,38 @@
 <view class="content">
-  <view>电影</view>
+  <view class="label">电影</view>
   <scroll-view scroll-x="true">
     <view class="movies">
       <view class="movie" wx:for="{{movie}}" wx:key="this">
         <navigator url="detail?type=movie&id={{item.id}}">
-          <image src="{{item.coverr.url}}" class="cover"></image>
-          <view>{{item.titlee}}</view>
-          <mystar value="{{item.ratingg.value}}" ></mystar>
+          <image src="{{item.cover.url}}" class="cover"></image>
+          <view class="title">{{item.title}}</view>
+          <mystar class="mystar" value="{{item.rating.value}}" ></mystar>
         </navigator>
       </view>
     </view>
   </scroll-view>
-  <view>电视剧</view>
+  <view class="line"></view>
+  <view class="label">电视剧</view>
   <scroll-view scroll-x="true">
     <view class="movies">
       <view class="movie" wx:for="{{tv}}" wx:key="this">
         <navigator url="detail?type=tv&id={{item.id}}">
           <image src="{{item.cover.url}}" class="cover"></image>
-          <view>{{item.title}}</view>
-          <mystar value="{{item.rating.value}}" ></mystar>
+          <view class="title">{{item.title}}</view>
+          <mystar class="mystar" value="{{item.rating.value}}" ></mystar>
         </navigator>
       </view>
     </view>
   </scroll-view>
-  <view>综艺</view>
+  <view class="line"></view>
+  <view class="label">综艺</view>
   <scroll-view scroll-x="true">
     <view class="movies">
       <view class="movie" wx:for="{{zy}}" wx:key="this">
         <navigator url="detail?type=tv&id={{item.id}}">
           <image src="{{item.cover.url}}" class="cover"></image>
-          <view>{{item.title}}</view>
-          <mystar value="{{item.rating.value}}" ></mystar>
+          <view class="title">{{item.title}}</view>
+          <mystar class="mystar" value="{{item.rating.value}}" ></mystar>
         </navigator>
       </view>
     </view>
