--- a/miniprogram/pages/work14/index.wxss
+++ b/miniprogram/pages/work14/index.wxss
@@ -1,6 +1,5 @@
 .movies{
   display: flex;
-
 }
 .movie{
   display: flex;
@@ -30,5 +29,13 @@
   width: 100%;
   height: 2px;
   background-color: #ccc;
-  margin: 20rpx;
+  margin: 20rpx 0;
+}
+.search{
+  display: flex;
+  margin-left: 20rpx;
+}
+.input{
+  border-bottom: 1px solid #ccc;
+  width: 100vh;
 }
