--- a/miniprogram/pages/work6/property.wxss
+++ b/miniprogram/pages/work6/property.wxss
@@ -1,1 +1,9 @@
-/* pages/work6/property.wxss */
+.exitbtn{
+  position: absolute;
+  bottom: 0;
+  left: 35%;
+  /* margin: auto; */
+  padding: 10rpx 80rpx;
+  background-color: rgb(12, 11, 11);
+  color: #fff;
+}
