--- a/miniprogram/pages/work15/index.wxml
+++ b/miniprogram/pages/work15/index.wxml
@@ -1,4 +1,4 @@
-<swiper circular="true" current="{{index}}">
+<swiper circular="true" current="{{index}}" bindchange="change">
   <swiper-item wx:for="{{plist}}" wx:key="this">
     <image src="{{item.fileid}}" bindtap="tap" bindlongpress="long" data-id="{{item.fileid}}"></image>
   </swiper-item>
